--- a/react-app/Jenkinsfile
+++ b/react-app/Jenkinsfile
@@ -14,6 +14,10 @@ pipeline {
                     sh '''
                         cd react-app
                         docker build -t react-app-image .
+                        echo "Docker image has been built successfully"
+                        docker images
+                        echo "Docker container"
+                        docker ps -a                                       
                     '''
                 }
             }
@@ -22,6 +26,13 @@ pipeline {
         stage('Run Docker Container') {
             steps {
                 script {
+                    // Remove existing container if it exists
+                    sh '''
+                        if [ $(docker ps -a -q -f name=react-app-container) ]; then
+                            docker rm -f react-app-container
+                        fi
+                    '''
+                    
                     // Running Docker container and exposing it to port 3000
                     sh '''
                         docker run -d -p 3000:3000 --name react-app-container react-app-image
