--- a/react-app/Jenkinsfile
+++ b/react-app/Jenkinsfile
@@ -4,11 +4,17 @@ pipeline {
         stage('Cleanup') {
             steps {
                 script {
-                    // Remove any existing container named react-app-container if it exists
+                    // Kiểm tra và giải phóng cổng 3000 nếu container nào đó đang sử dụng
                     sh '''
+                        if [ $(docker ps -q -f "publish=3000") ]; then
+                            docker ps -q -f "publish=3000" | xargs docker stop
+                        fi
+
+                        # Clean up any existing container with the same name
                         if [ $(docker ps -a -q -f name=react-app-container) ]; then
                             docker rm -f react-app-container
                         fi
+                        
                         # Clean up any dangling images
                         docker image prune -f
                         docker container prune -f
@@ -29,7 +35,6 @@ pipeline {
                     // Building Docker image
                     sh '''
                         cd react-app
-                        ls
                         docker build -t react-app-image .
                     '''
                 }
