--- a/jenkins-slave-be/Dockerfile
+++ b/jenkins-slave-be/Dockerfile
@@ -4,3 +4,5 @@ FROM jenkins/inbound-agent
 USER root
 # Install Maven
 RUN apt-get update && apt-get install -y maven
+
+RUN apt-get update && apt-get install -y docker.io
