--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,19 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   jenkins-slave-fe:
-    build: ./jenkins-slave-fe
+    build:
+      context: .
+      dockerfile: ./jenkins-slave-fe/Dockerfile
     container_name: jenkins-slave-fe
     environment:
       - JENKINS_URL=http://jenkins-master:8080
       - JENKINS_AGENT_NAME=slave-fe
       - JENKINS_SECRET=ce7d975857b1168357c501571137c44e8eac8bd331e56ff4a704785d876ed1ce
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    privileged: true
     user: root
+    entrypoint: ["/usr/local/bin/dockerd-entrypoint.sh"]
+    ports:
+      - "3000:3000"
 
   jenkins-slave-be:
     build: ./jenkins-slave-be
