--- a/springboot-app/src/main/resources/application.properties
+++ b/springboot-app/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=springboot-app
+spring.datasource.url=jdbc:mysql://mysql:3306/springboot_db
+spring.datasource.username=springuser
+spring.datasource.password=springpassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
